Bug 560806 - No duration or seeking on Ogg video URL's that redirect - r=roc (CLOSED TREE)